flask rest api course

--- a/flask_study/PythonFlaskAPI_UdemyCourse/client.ipynb
+++ b/flask_study/PythonFlaskAPI_UdemyCourse/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,31 +132,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res.status_code = 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'stores': [{'items': [{'name': 'The One Ring', 'price': 17.99}],\n",
+       "   'name': 'My LOTR Store'},\n",
+       "  {'items': [], 'name': 'Star Wars Store'}]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/store\")\n",
+    "print(f\"{res.status_code = }\")\n",
+    "resjson = res.json()\n",
+    "resjson"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res.status_code = 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'items': [], 'name': 'Star Wars Store'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.post(\"http://127.0.0.1:5000/store\", json={\"name\":\"Star Wars Store\"})\n",
+    "print(f\"{res.status_code = }\")\n",
+    "resjson = res.json()\n",
+    "resjson"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res.status_code = 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Light Saber', 'price': 5.99}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.post(\"http://127.0.0.1:5000/store/Star Wars Store/item\", json={\n",
+    "    \"name\": \"Light Saber\",\n",
+    "    \"price\": 5.99\n",
+    "})\n",
+    "print(f\"{res.status_code = }\")\n",
+    "resjson = res.json()\n",
+    "resjson"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res.status_code = 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'stores': [{'items': [{'name': 'The One Ring', 'price': 17.99}],\n",
+       "   'name': 'My LOTR Store'},\n",
+       "  {'items': [{'name': 'Light Saber', 'price': 5.99}],\n",
+       "   'name': 'Star Wars Store'}]}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/store\")\n",
+    "print(f\"{res.status_code = }\")\n",
+    "resjson = res.json()\n",
+    "resjson"
+   ]
   },
   {
    "cell_type": "code",
@@ -185,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
