saopaulo criminality study

--- a/julia_study/220212_01.ipynb
+++ b/julia_study/220212_01.ipynb
@@ -48,6 +48,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello again\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Hello again\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "1"
