--- a/flask_study/220428_Flask_SQLite/client.ipynb
+++ b/flask_study/220428_Flask_SQLite/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,24 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ====================================== #\n",
-    "# To request an access token\n",
-    "# ====================================== #\n",
-    "res = requests.post(\"http://127.0.0.1:5000/auth\",\n",
-    "                   json={ # this is the body of the request, it needs to have\n",
-    "                       \"username\": \"bob\", # the username and password\n",
-    "                       \"password\": \"asdf\"\n",
-    "                       })\n",
-    "access_token = res.json()[\"access_token\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +49,11 @@
      "output_type": "stream",
      "text": [
       "+-----------------------------------------------------------+\n",
-      "Status Code: 201\n",
+      "Status Code: 200\n",
       "\n",
       "HTTP Response Body:\n",
       "{\n",
-      "    \"name\": \"chair\",\n",
-      "    \"price\": 1982.0\n",
+      "    \"message\": \"User created successfully.\"\n",
       "}\n",
       "\n",
       "\n",
@@ -80,13 +62,76 @@
     }
    ],
    "source": [
+    "# ====================================== #\n",
+    "# Register a new user Dennis\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/register\",\n",
+    "    json={  \"username\": \"Dennis\",\n",
+    "            \"password\": \"Ritchie\"}\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================== #\n",
+    "# Example of wrong register of user\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/register\",\n",
+    "    json={  \"username\": \"Bob\"} # there is no password, the program should give an error\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================== #\n",
+    "# To request an access token for Dennis Ritchie\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/auth\",\n",
+    "                   json={   \"username\": \"Dennis\",\n",
+    "                            \"password\": \"Ritchie\"})\n",
+    "access_token = res.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================== #\n",
+    "# To request an access token\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/auth\",\n",
+    "                   json={ # this is the body of the request, it needs to have\n",
+    "                       \"username\": \"jose\", # the username and password\n",
+    "                       \"password\": \"asdf\"\n",
+    "                       })\n",
+    "access_token = res.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res = requests.post(\"http://127.0.0.1:5000/item/chair\", json={\"price\": 1982.00})\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -99,10 +144,6 @@
       "HTTP Response Body:\n",
       "{\n",
       "    \"items\": [\n",
-      "        {\n",
-      "            \"name\": \"piano\",\n",
-      "            \"price\": 1982.0\n",
-      "        },\n",
       "        {\n",
       "            \"name\": \"chair\",\n",
       "            \"price\": 1982.0\n",
@@ -122,7 +163,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 404\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"item\": null\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This request needs a token.\n",
+    "# This is what logged in means to a server.\n",
+    "# We need to prove that we have an information that only the user can have.\n",
+    "# This happens because API requests are independent of each other.\n",
+    "# But we can carry information in the request so that we can authenticate the user.\n",
+    "res = requests.get(\"http://127.0.0.1:5000/item/piano\", \n",
+    "    headers={\"Authorization\": \"JWT \" + access_token})\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -145,77 +219,13 @@
     }
    ],
    "source": [
-    "# This request needs a token\n",
-    "res = requests.get(\"http://127.0.0.1:5000/item/piano\")\n",
-    "print_http_response(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------------------------------------------------+\n",
-      "Status Code: 200\n",
-      "\n",
-      "HTTP Response Body:\n",
-      "{\n",
-      "    \"item\": {\n",
-      "        \"name\": \"piano\",\n",
-      "        \"price\": 1982.0\n",
-      "    }\n",
-      "}\n",
-      "\n",
-      "\n",
-      "+-----------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This request needs a token.\n",
-    "# This is what logged in means to a server.\n",
-    "# We need to prove that we have an information that only the user can have.\n",
-    "# This happens because API requests are independent of each other.\n",
-    "# But we can carry information in the request so that we can authenticate the user.\n",
-    "res = requests.get(\"http://127.0.0.1:5000/item/piano\", \n",
-    "    headers={\"Authorization\": \"JWT \" + access_token})\n",
-    "print_http_response(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------------------------------------------------+\n",
-      "Status Code: 404\n",
-      "\n",
-      "HTTP Response Body:\n",
-      "{\n",
-      "    \"item\": null\n",
-      "}\n",
-      "\n",
-      "\n",
-      "+-----------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
     "res = requests.get(\"http://127.0.0.1:5000/item/chair\")\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +233,13 @@
      "output_type": "stream",
      "text": [
       "+-----------------------------------------------------------+\n",
-      "Status Code: 200\n",
+      "Status Code: 401\n",
       "\n",
       "HTTP Response Body:\n",
       "{\n",
-      "    \"item\": {\n",
-      "        \"name\": \"piano\",\n",
-      "        \"price\": 1982.0\n",
-      "    }\n",
+      "  \"description\": \"Request does not contain an access token\", \n",
+      "  \"error\": \"Authorization Required\", \n",
+      "  \"status_code\": 401\n",
       "}\n",
       "\n",
       "\n",
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -253,12 +262,11 @@
      "output_type": "stream",
      "text": [
       "+-----------------------------------------------------------+\n",
-      "Status Code: 201\n",
+      "Status Code: 400\n",
       "\n",
       "HTTP Response Body:\n",
       "{\n",
-      "    \"name\": \"chair\",\n",
-      "    \"price\": 99.0\n",
+      "    \"message\": \"An item with name 'chair' already exists.\"\n",
       "}\n",
       "\n",
       "\n",
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -287,12 +295,8 @@
       "{\n",
       "    \"items\": [\n",
       "        {\n",
-      "            \"name\": \"piano\",\n",
-      "            \"price\": 1982.0\n",
-      "        },\n",
-      "        {\n",
       "            \"name\": \"chair\",\n",
-      "            \"price\": 99.0\n",
+      "            \"price\": 1982.0\n",
       "        }\n",
       "    ]\n",
       "}\n",
