--- a/flask_study/220428_Flask_SQLite/client.ipynb
+++ b/flask_study/220428_Flask_SQLite/client.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define and import"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,17 +128,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 201\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"name\": \"chair\",\n",
+      "    \"price\": 1982.0\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
-    "res = requests.post(\"http://127.0.0.1:5000/item/chair\", json={\"price\": 1982.00})\n",
+    "res = requests.post(\"http://127.0.0.1:5000/item/chair\", \n",
+    "    headers={\"Authorization\": \"JWT \" + access_token},\n",
+    "    json={\"price\": 1982.00})\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +184,15 @@
     }
    ],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/items\")\n",
+    "res = requests.get(\"http://127.0.0.1:5000/items\",\n",
+    "    headers={\"Authorization\": \"JWT \" + access_token},\n",
+    ")\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +214,7 @@
    ],
    "source": [
     "# This request needs a token.\n",
-    "# This is what logged in means to a server.\n",
+    "# This is what logged-in means to a server.\n",
     "# We need to prove that we have an information that only the user can have.\n",
     "# This happens because API requests are independent of each other.\n",
     "# But we can carry information in the request so that we can authenticate the user.\n",
@@ -196,7 +225,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"item\": {\n",
+      "        \"name\": \"chair\",\n",
+      "        \"price\": 1982.0\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/item/chair\",\n",
+    "    headers={\"Authorization\": \"JWT \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 404\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"item\": null\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/item/piano\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -219,69 +309,15 @@
     }
    ],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/item/chair\")\n",
+    "res = requests.post(\"http://127.0.0.1:5000/item/chair\", \n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    "    json={\"price\":99.00})\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------------------------------------------------+\n",
-      "Status Code: 401\n",
-      "\n",
-      "HTTP Response Body:\n",
-      "{\n",
-      "  \"description\": \"Request does not contain an access token\", \n",
-      "  \"error\": \"Authorization Required\", \n",
-      "  \"status_code\": 401\n",
-      "}\n",
-      "\n",
-      "\n",
-      "+-----------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/item/piano\")\n",
-    "print_http_response(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------------------------------------------------+\n",
-      "Status Code: 400\n",
-      "\n",
-      "HTTP Response Body:\n",
-      "{\n",
-      "    \"message\": \"An item with name 'chair' already exists.\"\n",
-      "}\n",
-      "\n",
-      "\n",
-      "+-----------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = requests.post(\"http://127.0.0.1:5000/item/chair\", json={\"price\":99.00})\n",
-    "print_http_response(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -307,23 +343,292 @@
     }
    ],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/items\")\n",
+    "res = requests.get(\"http://127.0.0.1:5000/items\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
     "print_http_response(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"message\": \"Item deleted\"\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = requests.delete(\"http://127.0.0.1:5000/item/chair\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An example with PUT request"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ====================================== #\n",
+    "# To request an access token for Dennis Ritchie\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/auth\",\n",
+    "                   json={   \"username\": \"Dennis\",\n",
+    "                            \"password\": \"Ritchie\"})\n",
+    "access_token = res.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 201\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"name\": \"chair\",\n",
+      "    \"price\": 99.0\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# Post a chair, with price 99.00\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/item/chair\", \n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    "    json={\"price\":99.00})\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"items\": [\n",
+      "        {\n",
+      "            \"name\": \"chair\",\n",
+      "            \"price\": 99.0\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# GET all items\n",
+    "# ====================================== #\n",
+    "res = requests.get(\"http://127.0.0.1:5000/items\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"name\": \"chair\",\n",
+      "    \"price\": 10.99\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# PUT change chair's price\n",
+    "# ====================================== #\n",
+    "res = requests.put(\"http://127.0.0.1:5000/item/chair\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    "    json={\"price\": 10.99}\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"items\": [\n",
+      "        {\n",
+      "            \"name\": \"chair\",\n",
+      "            \"price\": 10.99\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# GET all items, see if price changed\n",
+    "# ====================================== #\n",
+    "res = requests.get(\"http://127.0.0.1:5000/items\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using GET after sqlite3 reform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================== #\n",
+    "# To request an access token for Dennis Ritchie\n",
+    "# ====================================== #\n",
+    "res = requests.post(\"http://127.0.0.1:5000/auth\",\n",
+    "                   json={   \"username\": \"Dennis\",\n",
+    "                            \"password\": \"Ritchie\"})\n",
+    "access_token = res.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 200\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"item\": {\n",
+      "        \"name\": \"test\",\n",
+      "        \"price\": 10.99\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# GET the test item from the database\n",
+    "# ====================================== #\n",
+    "res = requests.get(\"http://127.0.0.1:5000/item/test\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------+\n",
+      "Status Code: 404\n",
+      "\n",
+      "HTTP Response Body:\n",
+      "{\n",
+      "    \"message\": \"Item not found\"\n",
+      "}\n",
+      "\n",
+      "\n",
+      "+-----------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================================== #\n",
+    "# try to GET an item that doesn't exist in the database\n",
+    "# ====================================== #\n",
+    "res = requests.get(\"http://127.0.0.1:5000/item/chair\",\n",
+    "    headers={\"authorization\": \"jwt \" + access_token},\n",
+    ")\n",
+    "print_http_response(res)"
+   ]
   },
   {
    "cell_type": "code",
@@ -335,10 +640,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0572692ec15b475301c6d4dac81e7f3a88103aaf3ccfccebd42cc1e29f4d7ff1"
+   "hash": "91a5a568192385e230f8881b0aa358097f53c390cad0a12eaafaf6e489649967"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
